--- a/StoreManager.API/appsettings.json
+++ b/StoreManager.API/appsettings.json
@@ -17,7 +17,7 @@
   },
   "AzureStorageSettings": {
     "ConnectionString": "Azure_Storage_ConnectionString_Here",
-    "ContainerName": "storemanager"
+    "ContainerName": "Your_ContainerName_Here"
   },
   "EmailSettings": {
     "SendGridApiKey": "UrSendeGridApiKey",
