--- a/StoreManager.API/appsettings.json
+++ b/StoreManager.API/appsettings.json
@@ -13,11 +13,11 @@
     "Audience": "https://localhost:7054"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Your_ConnectionString_Here"
+    "DefaultConnection": "your_connectionstring_here"
   },
   "AzureStorageSettings": {
-    "ConnectionString": "Azure_Storage_ConnectionString_Here",
-    "ContainerName": "Your_ContainerName_Here"
+    "ConnectionString": "your-new-storage-key-here",
+    "ContainerName": "your_containername_here"
   },
   "EmailSettings": {
     "SendGridApiKey": "UrSendeGridApiKey",
