--- a/StoreManager.API/appsettings.json
+++ b/StoreManager.API/appsettings.json
@@ -8,19 +8,19 @@
   "AllowedHosts": "*",
   "DOTNET_SYSTEM_GLOBALIZATION_INVARIANT": "false",
   "Jwt": {
-    "Key": "Your_Secret_key_here", // Replace this with an actual environment variable
-    "Issuer": "https://localhost:7054",
-    "Audience": "https://localhost:7054"
+    "Key": "YourSecretKeyHere",
+    "Issuer": "YourIssuerURL",
+    "Audience": "YourAudienceURL"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "your_connectionstring_here" // Replace this with an actual environment variable
+    "DefaultConnection": "YourDatabaseConnectionString"
   },
   "AzureStorageSettings": {
-    "ConnectionString": "your-new-storage-key-here", // Replace this with an actual environment variable
-    "ContainerName": "your_containername_here"
+    "ConnectionString": "YourAzureStorageConnectionString",
+    "ContainerName": "YourContainerName"
   },
   "EmailSettings": {
-    "SendGridApiKey": "UrSendeGridApiKey", // Replace this with an actual environment variable
-    "FromEmail": "Sender Email"
+    "SendGridApiKey": "YourSendGridApiKey",
+    "FromEmail": "YourSenderEmail"
   }
 }
