--- a/StoreManager.Services/StoreManager.Services.csproj
+++ b/StoreManager.Services/StoreManager.Services.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\StoreManager.Extensions\StoreManager.Extensions.csproj" />
     <ProjectReference Include="..\StoreManager.Facade\StoreManager.Facade.csproj" />
   </ItemGroup>
 
