--- a/StoreManager.API/appsettings.json
+++ b/StoreManager.API/appsettings.json
@@ -15,9 +15,13 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=G04_StoreManagerDatabase;Integrated Security=True;TrustServerCertificate=True;"
   },
-  "AzureStorageSettings": {
-    "ConnectionString": "yourazureconnectionstring",
-    "ContainerName": "storemanager"
+   "AzureBlobVideoStorageSettings": {
+    "ConnectionString": "UrAzureConnectionString_DO_NOT_SHARE",
+    "ContainerName": "urphotocontainer"
+  },
+  "AzureBlobPhotoStorageSettings": {
+    "ConnectionString": "UrAzureConnectionString_DO_NOT_SHARE",
+    "ContainerName": "yourvideocontainer"
   },
   "EmailSettings": {
     "SendGridApiKey": "yoursendgridapikey",
